[package]
name = "rust-dis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formatx = "0.2.1"
libc = "0.2.144"
regex = "1.8.4"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_yaml = "0.9.21"
similar = "2.2.1"
tempfile = "3.5.0"
yaml-rust = "0.4.5"
